--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <i>PIN:</i> <strong>1111</strong><br /><br />
         <strong>2.</strong> Jonas Schmedtmann with:<br />
         <i>user:</i> <strong>js</strong> <br />
-        <i>PIN:</i> <strong>2222</strong>
+        <i>PIN:</i> <strong>2222</strong><br /><br />
+        <i>
+          Note: You can request a loan for up to a maximum of 10 * maximum
+          deposit received.</i
+        >
       </p>
     </div>
     <!-- TOP NAVIGATION -->
